<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnadirActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewFoto"
        android:layout_width="129dp"
        android:layout_height="147dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editComentario"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:hint="@string/comentario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFoto"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/editLocalizacion"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:hint="@string/loc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editComentario"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/editTextEnlaceFoto"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:hint="@string/foto"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSentimiento"
        app:layout_constraintVertical_bias="0.10" />

    <Button
        android:id="@+id/btnGuardar"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/labelGuardar"
        app:icon="@android:drawable/ic_menu_save"
        app:iconSize="40dp"
        app:iconTint="@color/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextEnlaceFoto"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/editTextEnlaceFoto"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnlaceFoto"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/btnCancelar"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/labelCancelar"
        app:icon="@android:drawable/ic_menu_revert"
        app:iconSize="40dp"
        app:iconTint="@color/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextEnlaceFoto"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/editTextEnlaceFoto"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnlaceFoto"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/viewCompania"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eligeAcompanado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editLocalizacion"
        app:layout_constraintTop_toBottomOf="@+id/editLocalizacion"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/editAcompanado"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/indicacion"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCompania"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/viewSentimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eligeSentimiento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editAcompanado"
        app:layout_constraintTop_toBottomOf="@+id/editAcompanado"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/editSentimiento"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/indicacion"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSentimiento"
        app:layout_constraintVertical_bias="0.05" />


</androidx.constraintlayout.widget.ConstraintLayout>